--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -19,7 +19,7 @@
 
     <fragment
         android:id="@+id/navigation_notifications"
-        android:name="com.example.reseptron.ui.notifications.AdditionFragment"
+        android:name="com.example.reseptron.ui.addition.AdditionFragment"
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_addition" />
     <fragment
